# native-image-visualizations

./: .gitattributes  .gitmodules  Help Screens.pptx  LICENSE  README.md  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: eslint.yml  jest.yml  main.yml  observatory_ci.yml  prettier.yml
causality/: README.md  subuniverse-reachability.md
causality/causality-query/: README.md
causality/causality-query/native/: CMakeLists.txt  main.cpp
causality/causality-query/shared/: Bitset.h  analysis.h  input.h  model.h  reachability.h
causality/causality-query/web/: CMakeLists.txt  main.cpp
causality/heap-assignment-tracing-agent/: .gdbinit  README.md  main.cpp  native-image.args
causality/purge-diff/: .gitignore  Makefile  README.md  execute-ni.py
dumps/: desktop.ini  reachability.json
dumps/build-time-reflection/: reachability.json
dumps/hello-xml/: reachability.json
dumps/libgraal/: reachability.json
dumps/spring-petclinic/: reachability.json
dumps/virtual-helloworld/: reachability.json
hello-world/: HelloWorld.java
language-server/: README.md
language-server/vscode_extension/: .eslintrc.json  .vscodeignore  package.json
language-server/vscode_extension/src/: extension.ts
micronaut-app/: .gitignore  README.md  java.sh  ni-debug.sh  ni-with-agent.sh  ni.sh  pom.xml
observatory/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc  AboutUs.md  README.md  index.html  jest.config.js  package-lock.json  package.json  postcss.config.cjs  readme.md  rollup.config.mjs  style.css  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  zoomable_causality_graph.html
observatory/assets/css/src/: class_bubbles.scss  fileInput.css  hierarchy_bubbles.scss  main.scss  tree.scss  zoomable_causality_graph.scss
observatory/assets/data/: used_methods_helloworld.txt
observatory/assets/data/venn/: HW.csv  used_classes_HW.csv  used_packages_micronaut-mushop-carts-app.csv  used_packages_micronautguide-empty.csv  used_packages_micronautguide.txt
observatory/assets/js/: build_report_parser.js  build_reports_parser.js  class_bubbles.js  csv_parser.js  zoomable_causality_graph.js
observatory/assets/js/interfaces/: node.ts
observatory/assets/js/src/: BuildReportsParser.ts  csv_parser.js  data.ts  index.d.ts  main.ts  parser.ts  utils.ts  zoomable_causality_graph.js
observatory/src/: App.vue  Home.vue  main.ts  style.css  vite-env.d.ts
observatory/src/components/: DataInput.vue  DataManager.vue  ElevatedLayer.vue  Home.vue  MainLayout.vue  Sidebar.vue  Spinner.vue  VisualizationLink.vue
observatory/src/components/controls/: AlertBox.vue  ColorLabel.vue  DataManager.vue  DiffingUniversesFilterFieldset.vue  FilteringOptions.vue  InlineEditableField.vue  LayerSelection.vue  MultiToggleSwitch.vue  SankeyTreeControls.vue  SearchBar.vue  SelectionList.vue  SortingFilterFieldset.vue  Switch.vue  ToggleSwitch.vue  ToolTip.vue  UniverseSelectionList.vue  VennControls.vue  VisualizationNagivation.vue
observatory/src/ts/: BuildReportsParser.ts  configStore.ts  errors.ts  globals.ts  helpers.ts  mergeUniverses.ts  parser.ts  parsing.ts  stores.ts  utils.ts
observatory/src/visualizations/: HierarchyBubbles.vue  SankeyTree.vue  TreeLine.vue  Venn.vue  ZoomableCausalityGraph.vue
observatory/tests/: Sets.test.ts  TreeMerger.test.ts  filters.test.ts  mergedNode.test.ts  multiverse.test.ts  node.test.ts  parsing.test.ts  setup.ts  stores.test.ts  template.test.ts  treeLine.test.ts  universe.test.ts  utils.test.ts  venn.test.ts
observatory/tests/data/: forest.ts  trees.ts  universes.ts
observatory/tmp/: hierarchy_bubbles.html
observatory/visualizations/: bubbleTree.html  build_report_parsing_test.html  class_bubbles.html  hierarchy_bubbles.html  parsing_test.html  sankeyTree.html  tree.html  tree_bubble.html  tree_line.html  tree_sankey.html  venn.html  vennBubbles.html  vennHome.html  zoomable_causality_graph.html
observatory2/: .eslintrc.json  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
observatory2/src/: App.vue  style.css
observatory2/src/components/: Sidebar.vue
observatory2/src/scss/: styles.scss
observatory2/src/ts/: main.ts
observatory2/tmp/: venn.html
samples/build-time-reflection/: Main.java
samples/class-initialization/background_threaded/: Example.java
samples/class-initialization/reflective/: ReflectiveClassInitializationWorld.java
samples/hello-xml/: Main.java
samples/massive-heap/: MassiveHeap.java  RandomLanguage.java
samples/micronaut-app/: micronaut-cli.yml  pom.xml
samples/virtual-helloworld/: VirtualHelloWorld.java
spring/: .gitignore  HELP.md  pom.xml
subuniverse-reachability/causality-graph/: Bitset.h  CMakeLists.txt  analysis.h  emcc.sh  frontend.html  input.h  main.cpp  model.h  reachability.h  web-main.cpp
subuniverse-reachability/heap-assignment-tracing-agent/: .gitignore  CMakeLists.txt  ClassInitializationTracing.java  Erkenntnisse.txt  HeapAssignmentTracingHooks.java  Makefile  bytecode.cpp  main.cpp  settings.h
subuniverse-reachability/heap-assignment-tracing-agent/.run/: Run Agent on VirtualHelloWorld-example.run.xml
subuniverse-reachability/purge-vis/: index.html  style.css  zip.min.js
subuniverse-reachability/purge-vis/lib/: causality_graph.js  causality_graph.wasm
subuniverse-reachability/real/: README.md  execute-ni.py
tree-line/: index.html
venn/: README.md  bubbles.html  home.html  start.txt  tsconfig.json
venn/data/: MB.csv  MB4j.csv  used_classes_HelloWorld.txt  used_classes_micronautguide.txt  used_classes_micronautguide_log4j.txt  used_methods_HelloWorld.txt  used_packages_HelloWorld.txt
venn/include/: venn.js
venn/src/: data_formatter.ts
(+181 files in other folders)
